crates/forge_app/src/snapshots/forge_app__operation__tests__search_report_mixed_files_with_sorting.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<search_report_results>
<file
  path="src/main.rs"
><![CDATA[1:fn main() {
2:    run_app();
3:}
...
20:fn run_app() {
21:    println!("Running...");
22:}]]>
</file>
<file
  path="src/utils.rs"
><![CDATA[10:pub fn helper() -> i32 {
11:    42
12:}
...
50:pub fn calculate() -> i32 {
51:    100
52:}]]>
</file>
</search_report_results>
