crates/forge_app/src/snapshots/forge_app__operation__tests__search_report_multiple_chunks_same_file_sorted.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<search_report_results>
<file
  path="src/database.rs"
><![CDATA[10:fn get_user(id: u32) -> Result<User> {
11:    db.query("SELECT * FROM users WHERE id = ?", &[id])
12:}
...
50:fn update_user(id: u32, name: &str) -> Result<()> {
51:    db.execute("UPDATE users SET name = ? WHERE id = ?", &[name, id])
52:}
...
100:fn delete_user(id: u32) -> Result<()> {
101:    db.execute("DELETE FROM users WHERE id = ?", &[id])
102:}]]>
</file>
</search_report_results>
