crates/forge_app/src/snapshots/forge_app__operation__tests__search_report_single_chunk.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<search_report_results>
<file
  path="src/main.rs"
><![CDATA[1:fn main() {
2:    println!("Hello, world!");
3:}]]>
</file>
</search_report_results>
