crates/forge_app/src/snapshots/forge_app__operation__tests__sem_search_with_usecase.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
snapshot_kind: text
---
<sem_search_results>
<query_result
  query="authentication logic"
  use_case="need to add similar auth to my endpoint"
  results="1"
>
<file_chunk
  file_path="src/auth.rs"
  lines="10-12"
><![CDATA[10:fn authenticate_user(token: &str) -> Result<User> {
11:    verify_jwt(token)
12:}]]>
</file_chunk>
</query_result>
</sem_search_results>
